@@ -23,8 +23,8 @@
  */
 package org.biouno.unochoice;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.File;
 import java.net.URL;
@@ -52,9 +52,8 @@ import org.jenkinsci.plugins.scriptsecurity.scripts.languages.GroovyLanguage;
 import org.jenkinsci.plugins.workflow.cps.CpsFlowDefinition;
 import org.jenkinsci.plugins.workflow.job.WorkflowJob;
 import org.jenkinsci.plugins.workflow.job.WorkflowRun;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.JenkinsRule;
 
 import hudson.XmlFile;
@@ -67,6 +66,7 @@ import hudson.model.ParametersDefinitionProperty;
 import hudson.model.Result;
 import hudson.model.FileParameterValue.FileItemImpl2;
 import hudson.model.queue.QueueTaskFuture;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 
 /**
  * Regression tests, to confirm we are able to:
@@ -83,22 +83,23 @@ import hudson.model.queue.QueueTaskFuture;
  *
  * @since 1.5.3
  */
-public class TestPersistingParameters {
+@WithJenkins
+class TestPersistingParameters {
 
-    private final static String SCRIPT_PARAM001 = "return 1..10";
-    private final static String SCRIPT_FALLBACK_PARAM001 = "return []";
-    private final static String SCRIPT_PARAM002 = "return [PARAM001]";
-    private final static String SCRIPT_FALLBACK_PARAM002 = "return []";
+    private static final String SCRIPT_PARAM001 = "return 1..10";
+    private static final String SCRIPT_FALLBACK_PARAM001 = "return []";
+    private static final String SCRIPT_PARAM002 = "return [PARAM001]";
+    private static final String SCRIPT_FALLBACK_PARAM002 = "return []";
 
-    @Rule
-    public JenkinsRule j = new JenkinsRule();
+    private JenkinsRule j;
 
     private ScriptlerManagement scriptler;
 
     private File scriptFile = null;
 
-    @Before
-    public void setUp() throws Exception {
+    @BeforeEach
+    void setUp(JenkinsRule j) throws Exception {
+        this.j = j;
         ScriptApproval.get().preapprove(SCRIPT_PARAM001, new GroovyLanguage());
         ScriptApproval.get().preapprove(SCRIPT_FALLBACK_PARAM001, new GroovyLanguage());
         ScriptApproval.get().preapprove(SCRIPT_PARAM002, new GroovyLanguage());
@@ -113,7 +114,7 @@ public class TestPersistingParameters {
         scriptlerHelper.saveScript(fi, true, "dummy.groovy");
 
         scriptler.getConfiguration().getScriptById("dummy.groovy")
-                .setParameters(Arrays.asList(new Parameter("arg1", "v1")));
+                .setParameters(List.of(new Parameter("arg1", "v1")));
     }
 
     /**
@@ -122,7 +123,7 @@ public class TestPersistingParameters {
      * @throws Exception in Jenkins rule
      */
     @Test
-    public void testSaveParameters() throws Exception {
+    void testSaveParameters() throws Exception {
         FreeStyleProject project = j.createFreeStyleProject();
         GroovyScript scriptParam001 = new GroovyScript(new SecureGroovyScript(SCRIPT_PARAM001, false, null),
                 new SecureGroovyScript(SCRIPT_FALLBACK_PARAM001, false, null));
@@ -146,18 +147,16 @@ public class TestPersistingParameters {
         for (Entry<JobPropertyDescriptor, JobProperty<? super FreeStyleProject>> entry : reReadProject.getProperties()
                 .entrySet()) {
             JobProperty<? super FreeStyleProject> jobProperty = entry.getValue();
-            if (jobProperty instanceof ParametersDefinitionProperty) {
-                ParametersDefinitionProperty paramDef = (ParametersDefinitionProperty) jobProperty;
+            if (jobProperty instanceof ParametersDefinitionProperty paramDef) {
                 List<ParameterDefinition> parameters = paramDef.getParameterDefinitions();
                 for (ParameterDefinition parameter : parameters) {
-                    if (parameter instanceof AbstractScriptableParameter) {
+                    if (parameter instanceof AbstractScriptableParameter choiceParam) {
                         found++;
-                        AbstractScriptableParameter choiceParam = (AbstractScriptableParameter) parameter;
                         String scriptText = ((GroovyScript) choiceParam.getScript()).getScript().getScript();
                         String fallbackScriptText = ((GroovyScript) choiceParam.getScript()).getFallbackScript()
                                 .getScript();
-                        assertTrue("Found an empty script!", StringUtils.isNotBlank(scriptText));
-                        assertTrue("Found an empty fallback script!", StringUtils.isNotBlank(fallbackScriptText));
+                        assertTrue(StringUtils.isNotBlank(scriptText), "Found an empty script!");
+                        assertTrue(StringUtils.isNotBlank(fallbackScriptText), "Found an empty fallback script!");
                         if (parameter.getName().equals("param001")) {
                             assertEquals(SCRIPT_PARAM001, scriptText);
                             assertEquals(SCRIPT_FALLBACK_PARAM001, fallbackScriptText);
@@ -170,7 +169,7 @@ public class TestPersistingParameters {
             }
         }
         // We have two parameters before saving. We must have two now.
-        assertEquals("Didn't find all parameters after persisting xml", 2, found);
+        assertEquals(2, found, "Didn't find all parameters after persisting xml");
     }
 
     /**
@@ -180,10 +179,10 @@ public class TestPersistingParameters {
      * @throws Exception in Jenkins rule
      */
     @Test
-    public void testSaveScriptlerParameters() throws Exception {
+    void testSaveScriptlerParameters() throws Exception {
         FreeStyleProject project = j.createFreeStyleProject();
 
-        final ScriptlerBuilder scriptlerBuilder = new ScriptlerBuilder("", "dummy.groovy", false, new Parameter[] {new Parameter("arg1", "bla")});
+        final ScriptlerBuilder scriptlerBuilder = new ScriptlerBuilder("", "dummy.groovy", false, List.of(new Parameter("arg1", "bla")));
         ScriptlerScript scriptParam001 = new ScriptlerScript(scriptlerBuilder, Boolean.TRUE);
         ChoiceParameter param001 = new ChoiceParameter("param001", "param001 description", "random-name",
                 scriptParam001, AbstractUnoChoiceParameter.PARAMETER_TYPE_SINGLE_SELECT, true, 1);
@@ -205,40 +204,38 @@ public class TestPersistingParameters {
         for (Entry<JobPropertyDescriptor, JobProperty<? super FreeStyleProject>> entry : reReadProject.getProperties()
                 .entrySet()) {
             JobProperty<? super FreeStyleProject> jobProperty = entry.getValue();
-            if (jobProperty instanceof ParametersDefinitionProperty) {
-                ParametersDefinitionProperty paramDef = (ParametersDefinitionProperty) jobProperty;
+            if (jobProperty instanceof ParametersDefinitionProperty paramDef) {
                 List<ParameterDefinition> parameters = paramDef.getParameterDefinitions();
                 for (ParameterDefinition parameter : parameters) {
-                    if (parameter instanceof AbstractScriptableParameter) {
+                    if (parameter instanceof AbstractScriptableParameter choiceParam) {
                         found++;
-                        AbstractScriptableParameter choiceParam = (AbstractScriptableParameter) parameter;
                         Script leScript = choiceParam.getScript();
                         if (leScript instanceof GroovyScript) {
                             String scriptText = ((GroovyScript) leScript).getScript().getScript();
                             String fallbackScriptText = ((GroovyScript) choiceParam.getScript()).getFallbackScript()
                                     .getScript();
-                            assertTrue("Found an empty script!", StringUtils.isNotBlank(scriptText));
-                            assertTrue("Found an empty fallback script!", StringUtils.isNotBlank(fallbackScriptText));
+                            assertTrue(StringUtils.isNotBlank(scriptText), "Found an empty script!");
+                            assertTrue(StringUtils.isNotBlank(fallbackScriptText), "Found an empty fallback script!");
                             assertEquals(SCRIPT_PARAM002, scriptText);
                             assertEquals(SCRIPT_FALLBACK_PARAM002, fallbackScriptText);
                         } else {
                             String scriptText = FileUtils.readFileToString(scriptFile, Charset.defaultCharset());
-                            assertTrue("Found an empty script!", StringUtils.isNotBlank(scriptText));
+                            assertTrue(StringUtils.isNotBlank(scriptText), "Found an empty script!");
                             assertEquals(SCRIPT_PARAM001, scriptText);
-                            assertEquals("Wrong number of parameters for scriptler parameter!", 1, ((ScriptlerScript) leScript).getParameters().size());
-                            assertEquals("Wrong scriptler parameter name!", "arg1", ((ScriptlerScript) leScript).getParameters()
-                                    .keySet().iterator().next());
+                            assertEquals(1, ((ScriptlerScript) leScript).getParameters().size(), "Wrong number of parameters for scriptler parameter!");
+                            assertEquals("arg1", ((ScriptlerScript) leScript).getParameters()
+                                    .keySet().iterator().next(), "Wrong scriptler parameter name!");
                         }
                     }
                 }
             }
         }
         // We have two parameters before saving. We must have two now.
-        assertEquals("Didn't find all parameters after persisting xml", 2, found);
+        assertEquals(2, found, "Didn't find all parameters after persisting xml");
     }
 
     @Test
-    public void testSaveScriptlerParametersFromPipeline() throws Exception {
+    void testSaveScriptlerParametersFromPipeline() throws Exception {
         WorkflowJob job = j.createProject(WorkflowJob.class);
 
         URL pipelinePath = TestPersistingParameters.class.getResource("PipelineWithScriptlerParameters.groovy");
@@ -256,34 +253,32 @@ public class TestPersistingParameters {
         WorkflowJob reReadJob = (WorkflowJob) configXml.read();
         int found = 0;
         for (JobProperty<? super WorkflowJob> jobProperty : reReadJob.getProperties().values()) {
-            if (jobProperty instanceof ParametersDefinitionProperty) {
-                ParametersDefinitionProperty paramDef = (ParametersDefinitionProperty) jobProperty;
+            if (jobProperty instanceof ParametersDefinitionProperty paramDef) {
                 List<ParameterDefinition> parameters = paramDef.getParameterDefinitions();
                 for (ParameterDefinition parameter : parameters) {
-                    if (parameter instanceof AbstractScriptableParameter) {
+                    if (parameter instanceof AbstractScriptableParameter choiceParam) {
                         found++;
-                        AbstractScriptableParameter choiceParam = (AbstractScriptableParameter) parameter;
                         Script leScript = choiceParam.getScript();
                         if (leScript instanceof GroovyScript) {
                             String scriptText = ((GroovyScript) leScript).getScript().getScript();
                             String fallbackScriptText = ((GroovyScript) leScript).getFallbackScript().getScript();
-                            assertTrue("Found an empty script!", StringUtils.isNotBlank(scriptText));
-                            assertTrue("Found an empty fallback script!", StringUtils.isNotBlank(fallbackScriptText));
+                            assertTrue(StringUtils.isNotBlank(scriptText), "Found an empty script!");
+                            assertTrue(StringUtils.isNotBlank(fallbackScriptText), "Found an empty fallback script!");
                             assertEquals(SCRIPT_PARAM002, scriptText);
                             assertEquals(SCRIPT_FALLBACK_PARAM002, fallbackScriptText);
                         } else {
                             String scriptText = FileUtils.readFileToString(scriptFile, Charset.defaultCharset());
-                            assertTrue("Found an empty script!", StringUtils.isNotBlank(scriptText));
+                            assertTrue(StringUtils.isNotBlank(scriptText), "Found an empty script!");
                             assertEquals(SCRIPT_PARAM001, scriptText);
-                            assertEquals("Wrong number of parameters for scriptler parameter!", 1, ((ScriptlerScript) leScript).getParameters().size());
-                            assertEquals("Wrong scriptler parameter name!", "arg1", ((ScriptlerScript) leScript).getParameters()
-                                    .keySet().iterator().next());
+                            assertEquals(1, ((ScriptlerScript) leScript).getParameters().size(), "Wrong number of parameters for scriptler parameter!");
+                            assertEquals("arg1", ((ScriptlerScript) leScript).getParameters()
+                                    .keySet().iterator().next(), "Wrong scriptler parameter name!");
                         }
                     }
                 }
             }
         }
         // We have two parameters before saving. We must have two now.
-        assertEquals("Didn't find all parameters after persisting xml", 2, found);
+        assertEquals(2, found, "Didn't find all parameters after persisting xml");
     }
 }
