@@ -23,24 +23,23 @@
  */
 package org.biouno.unochoice.issue63963;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import hudson.model.Descriptor;
 import org.biouno.unochoice.CascadeChoiceParameter;
 import org.biouno.unochoice.model.GroovyScript;
 import org.jenkinsci.plugins.scriptsecurity.sandbox.groovy.SecureGroovyScript;
 import org.jenkinsci.plugins.scriptsecurity.scripts.ScriptApproval;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.JenkinsRule;
 import org.jvnet.hudson.test.JenkinsRule.WebClient;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 import org.xml.sax.SAXException;
 
 import org.htmlunit.html.DomElement;
@@ -59,10 +58,8 @@ import hudson.model.StringParameterDefinition;
  *
  * @since 2.5.1
  */
-public class TestGroovyScriptParametersOrder {
-
-    @Rule
-    public JenkinsRule j = new JenkinsRule();
+@WithJenkins
+class TestGroovyScriptParametersOrder {
 
     /**
      * Using test kindly provided by Jason Antman in JENKINS-63963. See issue in JIRA for more context
@@ -72,31 +69,32 @@ public class TestGroovyScriptParametersOrder {
      * @throws SAXException if the XML is malformed
      */
     @Test
-    public void testGroovyScriptParametersOrder() throws IOException, SAXException, Descriptor.FormException {
+    void testGroovyScriptParametersOrder(JenkinsRule j) throws IOException, SAXException, Descriptor.FormException {
         FreeStyleProject project = j.createFreeStyleProject();
 
         StringParameterDefinition teamUid = new StringParameterDefinition("TEAM_UID", "foo", "Team name (UID)");
         StringParameterDefinition environment = new StringParameterDefinition("ENVIRONMENT", "bar", "The environment name to use for this stack (default: dev)");
 
-        String scriptText = "Map getOptions(String teamId, String enviro) {\n"
-                + "    def found_snapshots = [\"\":\"Select a backup file or snapshot to restore for \" + teamId + \" enviro \" + enviro]; // value => selection text\n"
-                + "    found_snapshots[\"one\"] = \"snapshot e\";\n"
-                + "    found_snapshots[\"two\"] = \"snapshot d\";\n"
-                + "    found_snapshots[\"three\"] = \"snapshot c\";\n"
-                + "    found_snapshots[\"four\"] = \"snapshot b\";\n"
-                + "    found_snapshots[\"five\"] = \"snapshot a\";\n"
-                + "    return found_snapshots;\n"
-                + "}\n"
-                + "\n"
-                + "// get the choice parameters\n"
-                + "if (binding.variables.get(\"TEAM_UID\") == null) { return [''] }\n"
-                + "def team_uid = binding.variables.get(\"TEAM_UID\")\n"
-                + "if (binding.variables.get(\"ENVIRONMENT\") == null) { return [''] }\n"
-                + "def environment = binding.variables.get(\"ENVIRONMENT\")\n"
-                + "if(environment == '' || team_uid == '') { return [''] }\n"
-                + "def snapshots;\n"
-                + "snapshots = getOptions(team_uid, environment);\n"
-                + "return snapshots;";
+        String scriptText = """
+                Map getOptions(String teamId, String enviro) {
+                    def found_snapshots = ["":"Select a backup file or snapshot to restore for " + teamId + " enviro " + enviro]; // value => selection text
+                    found_snapshots["one"] = "snapshot e";
+                    found_snapshots["two"] = "snapshot d";
+                    found_snapshots["three"] = "snapshot c";
+                    found_snapshots["four"] = "snapshot b";
+                    found_snapshots["five"] = "snapshot a";
+                    return found_snapshots;
+                }
+                
+                // get the choice parameters
+                if (binding.variables.get("TEAM_UID") == null) { return [''] }
+                def team_uid = binding.variables.get("TEAM_UID")
+                if (binding.variables.get("ENVIRONMENT") == null) { return [''] }
+                def environment = binding.variables.get("ENVIRONMENT")
+                if(environment == '' || team_uid == '') { return [''] }
+                def snapshots;
+                snapshots = getOptions(team_uid, environment);
+                return snapshots;""";
         ScriptApproval.get().approveSignature("method groovy.lang.Binding getVariables");
         SecureGroovyScript secureScript = new SecureGroovyScript(scriptText, true, null);
 
@@ -126,14 +124,14 @@ public class TestGroovyScriptParametersOrder {
                 break;
             }
         }
-        if (select == null) {
-            fail("Missing cascade parameter select HTML node element!");
-        }
+
+        assertNotNull(select, "Missing cascade parameter select HTML node element!");
+
         List<HtmlOption> htmlOptions = select.getOptions();
         final List<String> options = htmlOptions
                 .stream()
                 .map(HtmlOption::getText)
-                .collect(Collectors.toList());
+                .toList();
         final List<String> expected = new LinkedList<>();
         {
             expected.add("Select a backup file or snapshot to restore for foo enviro bar");
@@ -143,7 +141,7 @@ public class TestGroovyScriptParametersOrder {
             expected.add("snapshot b");
             expected.add("snapshot a");
         }
-        assertEquals("Wrong number of HTML options rendered", expected.size(), options.size());
-        assertEquals("Wrong HTML options rendered (or out of order)", expected, options);
+        assertEquals(expected.size(), options.size(), "Wrong number of HTML options rendered");
+        assertEquals(expected, options, "Wrong HTML options rendered (or out of order)");
     }
 }
